# rust_frontend_blockchain

./: Cargo.toml  README.me  Trunk.toml  index.html
src/: blockchain.rs  main.rs
static/: styles.css
