[package]
name = "rust_blockchain_app" # Replace with your project name
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "HtmlInputElement"] }
wasm-bindgen = "0.2"
gloo-timers = "0.2"

[[bin]]
name = "rust_blockchain_app"
path = "src/main.rs"

